sites/all/themes/cp_theme/forms.css
/* Forms */

fieldset {
  clear: both;
  }

.section-cp fieldset legend, h3#modal-title {
	font-weight: bold;
	color:#425e69;
	font-size: 1.2em;
	float: left;
	}

.section-cp .fieldset-wrapper, .section-cp div.spaces-block-customizer, .section-cp div.description  {
	padding: 4px;
	margin-bottom: 3em;
	margin-left: 190px;
	}

/*FireFox 3*/
@-moz-document url-prefix() {
  .section-cp .fieldset-wrapper, .section-cp div.spaces-block-customizer, .section-cp div.description {
  margin-top:-28px;
    }
  }

.section-cp .fieldset-wrapper .fieldset-wrapper {
	margin: 0;
	}

.section-cp div.form-item {
	margin: 0 1em 0 0;
	border: none;
  }

.views-exposed-form .views-exposed-widget {
  padding: 0 2em 0 0;
  }

#views-bulk-operations-submit {
  padding: 0;
  }

select option {
  padding: 2px 5px;
  }

.form-radios {
  margin: 1em 0;
  }

.section-cp .form-radios input {
  margin: 3px 3px 3px 0;
  }

.section-cp fieldset table tr {
  border: none;
  }

.section-cp label, .section-cp div.form-item label, .section-cp .description, div.spaces-block-customizer, th {
	font-weight: bold;
	color:#333;
	font-size: .9em;
	margin-bottom: 3px;
	}


.section-cp label, .section-cp div.form-item label, .section-cp .description, div.spaces-block-customizer {
	display:block;
	text-transform:none;
	}

.section-cp label.option, .section-cp div.form-item label.option {
  font-weight: normal;
  }


.section-cp div.description {
	color:#777;
	font-weight: normal;
	line-height: 127%;
	}

.section-cp .fieldset-wrapper div.description, .section-cp table div.description, .section-cp .form-item div.description {
  margin-left: 0;
  padding: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  }

table.features div.feature div.description {
  font-size:11px;
  line-height:18px;
  margin:0;
  }

#modal-content table {
  width:auto;
  }



h3#modal-title {
  float: none;
  margin-bottom: 1.5em;
  }

.section-cp div.fieldset, .section-cp fieldset, .section-cp .container-inline-date {
  background: transparent;
  clear: both;
  }

.section-cp fieldset {
  border: none;
  /*border-bottom: 1px solid #ccc;*/
  }

.section-cp fieldset fieldset, #views-bulk-operations-select fieldset {
  border: none;
  }

.section-cp label.option {
	color: #666;
	}

.section-cp input.form-text {
	padding: 4px 3px 2px 3px;
	margin: -3px;
	border-width: 2px;
	-moz-border-top-colors: #f9f9f9 #707070;
	-moz-border-left-colors: #f9f9f9 #ABABAB;
	-moz-border-right-colors: #f9f9f9 #ABABAB;
	-moz-border-bottom-colors: #f9f9f9 #CECECE;
	}

.ctools-use-modal-processed .buttons	{
  margin-top: 30px;
  }

a.close-this {
  display:block;
  float:right;
  }

fieldset.group-account-basics {
  padding: 0;
  }

/* Various Views */

/*
#views-bulk-operations-select {
  left:555px;
  position:absolute;
  top:12px;
  }*/


/* These really should have a standard class "top-marg" or something */

#user-profile-form .description,
#edit-pass-pass1,
#edit-vsite-users-first-name-0-value,
#edit-vsite-users-last-name-0-value {
  margin-bottom: 14px;
  }


/* Biblio Settings View */

.modal_col {
  float: left;
  width: 45%;
  margin-right: 46px;
  }

div.ctools-modal-content .modal_col div.form-item {
  margin: 1em 0 1.5em 0;
  }

div.ctools-modal-content .modal_col div.form-item .form-item {
  margin: 0;
  }

div.ctools-modal-content .modal_col .form-item label {
  width: auto;
  }

/* USER CREATION */

div.ctools-modal-content #ucreate-user-form .form-item label {
  float: none;
  width: auto;
  }



form div.buttons {
  text-align: left;
  margin-left: 200px;
  }

/* CONTENT PAGES FILTERING AND UPDATING OPTIONS */

/* Removing formating for now 9/28/09

fieldset.vsite_content_filter_box {
  float: left;
  }

#views-bulk-operations-select {
  position: absolute;
  left:135px;
  top:48px;
  top: 3.7em;
  }

#views-bulk-operations-form--1 .views-node-selector {
  clear: both;
  }

.vsite_content_bulk_update {
  margin: 0;
  }
*/
.vsite_content_filter_box .fieldset-wrapper, #views-bulk-operations-select .fieldset-wrapper {
  margin-left: 0;
  margin-top: -6px;
  font-size:0.8em;
  padding:20px 20px 10px;
  background: #EAEBE9;
  }

.view-vsite-content .vsite_content_filter_box legend, #views-bulk-operations-select legend {
  padding-top: 4px;
  font-size: 1em;
  }

.view-vsite-content .vsite_content_filter_box legend.collapse-processed, #views-bulk-operations-select legend.collapse-processed {
  background: #EAEBE9;
  padding-right:5px;
  }

.view-vsite-content fieldset.collapsed legend.collapse-processed, #views-bulk-operations-select fieldset.collapsed legend.collapse-processed {
  background: transparent;
  }

